@@ -1,6 +1,7 @@
 package dev.lucaargolo.charta.blockentity;
 
 import com.mojang.datafixers.util.Pair;
+import dev.lucaargolo.charta.Charta;
 import dev.lucaargolo.charta.block.CardTableBlock;
 import dev.lucaargolo.charta.block.GameChairBlock;
 import dev.lucaargolo.charta.block.SeatBlock;
@@ -16,7 +17,6 @@ import dev.lucaargolo.charta.utils.CardImage;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
@@ -24,20 +24,18 @@ import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientGamePacketListener;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.Mth;
 import net.minecraft.world.Containers;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.neoforge.network.PacketDistributor;
+import net.minecraftforge.network.PacketDistributor;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.joml.Vector2f;
@@ -104,11 +102,11 @@ public class CardTableBlockEntity extends BlockEntity {
                     if(CardGame.canPlayGame(game, this.getDeck())) {
                         if (players.size() >= game.getMinPlayers()) {
                             if (players.size() <= game.getMaxPlayers()) {
-                                PacketDistributor.sendToPlayersTrackingChunk((ServerLevel) level, new ChunkPos(worldPosition), new GameSlotResetPayload(worldPosition));
+                                Charta.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(()->level.getChunkAt(worldPosition)), new GameSlotResetPayload(worldPosition));
                                 for(CardPlayer player : players) {
                                     LivingEntity entity = player.getEntity();
                                     if (entity instanceof ServerPlayer serverPlayer) {
-                                        PacketDistributor.sendToPlayer(serverPlayer, new GameStartPayload());
+                                        Charta.INSTANCE.send(PacketDistributor.PLAYER.with(()->serverPlayer), new GameStartPayload());
                                     }
                                 }
                                 this.resetSlots();
@@ -188,10 +186,10 @@ public class CardTableBlockEntity extends BlockEntity {
     }
 
     @Override
-    protected void saveAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider registries) {
-        super.saveAdditional(tag, registries);
+    protected void saveAdditional(@NotNull CompoundTag tag) {
+        super.saveAdditional(tag);
         if(!deckStack.isEmpty()) {
-            tag.put("deckStack", deckStack.save(registries));
+            tag.put("deckStack", deckStack.save(new CompoundTag()));
         }else{
             tag.put("deckStack", new CompoundTag());
         }
@@ -200,12 +198,13 @@ public class CardTableBlockEntity extends BlockEntity {
     }
 
     @Override
-    protected void loadAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider registries) {
-        super.loadAdditional(tag, registries);
+    public void load(@NotNull CompoundTag tag) {
+        super.load(tag);
         if(tag.contains("deckStack")) {
             Tag deckTag = tag.get("deckStack");
             if(deckTag instanceof CompoundTag compoundTag && !compoundTag.getAllKeys().isEmpty()) {
-                ItemStack.parse(registries, deckTag).ifPresentOrElse(this::setDeckStack, () -> setDeckStack(ItemStack.EMPTY));
+//                ItemStack.of(compoundTag).ifPresentOrElse(this::setDeckStack, () -> setDeckStack(ItemStack.EMPTY));
+                this.setDeckStack(ItemStack.of(compoundTag));
             }else {
                 setDeckStack(ItemStack.EMPTY);
             }
@@ -215,15 +214,15 @@ public class CardTableBlockEntity extends BlockEntity {
     }
 
     @Override
-    public void handleUpdateTag(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider lookupProvider) {
+    public void handleUpdateTag(@NotNull CompoundTag tag) {
         this.resetSlots();
-        super.handleUpdateTag(tag, lookupProvider);
+        super.handleUpdateTag(tag);
     }
 
     @Override
-    public @NotNull CompoundTag getUpdateTag(HolderLookup.@NotNull Provider registries) {
-        CompoundTag tag = super.getUpdateTag(registries);
-        saveAdditional(tag, registries);
+    public @NotNull CompoundTag getUpdateTag() {
+        CompoundTag tag = super.getUpdateTag();
+        saveAdditional(tag);
         return tag;
     }
 
@@ -287,8 +286,8 @@ public class CardTableBlockEntity extends BlockEntity {
                         if(SeatBlock.isSeatOccupied(this.level, pos)) {
                             List<SeatEntity> seats = level.getEntitiesOfClass(SeatEntity.class, new AABB(pos));
                             if(!seats.isEmpty()) {
-                                List<Entity> passengers = seats.getFirst().getPassengers();
-                                if(!passengers.isEmpty() && passengers.getFirst() instanceof LivingEntity entity) {
+                                List<Entity> passengers = seats.get(0).getPassengers();
+                                if(!passengers.isEmpty() && passengers.get(0) instanceof LivingEntity entity) {
                                     players.add(entity);
                                 }
                             }
@@ -314,7 +313,7 @@ public class CardTableBlockEntity extends BlockEntity {
         });
 
         Collections.shuffle(entries);
-        Pair<Vector2i, CardPlayer> firstEntry = entries.getFirst();
+        Pair<Vector2i, CardPlayer> firstEntry = entries.get(0);
         Vector2i firstPos = firstEntry.getFirst();
         int firstQuadrant = getQuadrant(firstPos);
         List<Integer> order = new ArrayList<>();
@@ -345,16 +344,19 @@ public class CardTableBlockEntity extends BlockEntity {
                 return Integer.compare(order.indexOf(aq), order.indexOf(bq));
             }
         });
-
-        return entries.stream().map(Pair::getSecond).toList().reversed();
+        List<CardPlayer> out = new ArrayList<>(entries.stream().map(Pair::getSecond).toList());
+        Collections.reverse(out);
+        return out;
     }
 
     public static void serverTick(Level level, BlockPos pos, BlockState state, CardTableBlockEntity blockEntity) {
+//        if (!(level instanceof ServerLevel)) return;
+
         Iterator<Integer> updateIterator = blockEntity.dirtySlotCards.iterator();
         while (updateIterator.hasNext()) {
             int index = updateIterator.next();
             GameSlot slot = blockEntity.trackedSlots.get(index);
-            PacketDistributor.sendToPlayersTrackingChunk((ServerLevel) level, new ChunkPos(pos), new GameSlotCompletePayload(pos, index, slot));
+            Charta.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(()->level.getChunkAt(pos)),new GameSlotCompletePayload(pos, index, slot));
             blockEntity.dirtySlotPositions.remove(index);
             updateIterator.remove();
         }
@@ -362,7 +364,7 @@ public class CardTableBlockEntity extends BlockEntity {
         while (updateIterator.hasNext()) {
             int index = updateIterator.next();
             GameSlot slot = blockEntity.trackedSlots.get(index);
-            PacketDistributor.sendToPlayersTrackingChunk((ServerLevel) level, new ChunkPos(pos), new GameSlotPositionPayload(pos, index, slot.getX(), slot.getY(), slot.getZ(), slot.getAngle()));
+            Charta.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(()->level.getChunkAt(pos)),new GameSlotPositionPayload(pos, index, slot.getX(), slot.getY(), slot.getZ(), slot.getAngle()));
             updateIterator.remove();
         }
         if(!state.getValue(CardTableBlock.CLOTH) && !blockEntity.getDeckStack().isEmpty()) {
@@ -383,7 +385,7 @@ public class CardTableBlockEntity extends BlockEntity {
                 }
                 game.tick();
             }else{
-                PacketDistributor.sendToPlayersTrackingChunk((ServerLevel) level, new ChunkPos(pos), new GameSlotResetPayload(pos));
+                Charta.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(()->level.getChunkAt(pos)),new GameSlotResetPayload(pos));
                 blockEntity.resetSlots();
                 blockEntity.game = null;
             }
